# HKBU_COMP4026_PROJECT

./: .gitignore  CODING_TASK_PLAN.md  Development_plan.md  Project-Proposal.md  README.md  pyproject.toml  requirements.txt  source-code.md
configs/: config.yaml  training.yaml
configs/anonymizers/: blackout.yaml  blur.yaml  ciagan.yaml  deep_privacy2.yaml  ganonymization.yaml  k_same.yaml  pixelate.yaml
configs/datasets/: celebahq.yaml  fer2013.yaml  pins.yaml
configs/experiments/: baseline_sweep.yaml  conditioning_ablation.yaml  gan_comparison.yaml
configs/models/: default.yaml
data/: README.md
notebooks/: final_report.ipynb
reports/: comparison.csv  comparison.md  comparison.tex  contribution_narrative.md  summary.json
results/adaptive_attacker_ablation/: comparison.csv  comparison_table.md
results/baseline_sweep/: frontier.csv
results/conditioning_ablation/: ablation_table.md  frontier.csv
results/expression_loss_ablation/: ablation_table.md  frontier.csv
results/gan_comparison/: frontier.csv
results/ksame_sweep/: frontier.csv
scripts/: _run_train_test.py  check_env.py  ci_smoke_test.py  download_data.py  finetune_anonymizer.py  generate_synthetic.py  run_adaptive_attacker_ablation.py  run_baseline_sweep.py  run_conditioning_ablation.py  run_expression_loss_ablation.py  run_gan_comparison.py  run_ksame_sweep.py  train_expression.py  train_expression_adapted.py
src/: __init__.py
src/anonymizers/: __init__.py  base.py  ciagan.py  classical.py  deep_privacy2.py  ganonymization.py  k_same.py
src/data/: __init__.py  celebahq_adapter.py  contracts.py  fer2013_adapter.py  pins_adapter.py
src/metrics/: __init__.py  expression_metrics.py  privacy_metrics.py  realism_metrics.py
src/models/: __init__.py  adaptive_attacker.py  expression_metrics.py  (+4 more)
tests/: test_anonymizers.py  test_data.py  test_integration.py  test_metrics.py  test_models.py  test_regression.py
(+73 files in other folders)
