[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends"

[project]
name = "face-anon-fer"
version = "0.1.0"
description = "Anonymised Facial Expression Recognition — COMP4026 Project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    # ── Core deep learning ──────────────────────────────────
    "torch>=2.1",
    "torchvision>=0.16",
    "torchaudio>=2.1",

    # ── Config management ───────────────────────────────────
    "hydra-core>=1.3",
    "omegaconf>=2.3",

    # ── Face detection / recognition ────────────────────────
    "insightface>=0.7",
    "onnxruntime-gpu>=1.16",
    "facenet-pytorch>=2.5",          # MTCNN

    # ── Image processing ────────────────────────────────────
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "kornia>=0.7",

    # ── Metrics / evaluation ────────────────────────────────
    "pytorch-fid>=0.3",
    "clean-fid>=0.1",
    "lpips>=0.1",
    "scikit-learn>=1.3",
    "scipy>=1.11",

    # ── Model backbones ─────────────────────────────────────
    "timm>=0.9",

    # ── Data / utilities ────────────────────────────────────
    "pandas>=2.1",
    "numpy>=1.24",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # ── Experiment tracking ─────────────────────────────────
    "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "ipykernel>=6.25",
    "jupyter>=1.0",
]
wandb = [
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
